Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.3, 6.4, 6.5, 6.6, 6.7
-
None
-
-
7718d0faa (dev), b68293e33 (6.8), 55d7d65c6 (tqtc/lts-6.5)
Description
It seems that there is a small mistake in WinRT implementation:
const QByteArray bufferData;
bufferData + 16 <--
QByteArray doesn't have +int operator. I might be wrong but perhaps it falls back to "inline operator const char () const;" or "[]" or something. Anyway, it seems to end in char*, because array is terminated if service data contains zero byte.
I will submit a patch.